test/Fail/WrongHidingInLHS.agda

module WrongHidingInLHS where

f : Set -> Set
f {x} = x

