test/Fail/WrongHidingInLHS.err
WrongHidingInLHS.agda:5.4-5: error: [WrongHidingInLHS]
Unexpected implicit argument
when checking the clause left hand side
f {x}
